ingress-services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-client
            port:
              number: 8002
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: student-server
            port:
              number: 5000
